  Switch timers now have the same option.
- in addition to the announcements via OSD new events can now also be reported by mail.
  To do so, there's a new search timer action "Announce by mail". You also have to update 
  your mail template file epgsearchupdmail.templ (s. the updated sample in the conf directory 
  and/or read the MANUAL '13. Email notification').
- new internal variables:
  * %day%, %month% and %year% which return the numeric day, month and year
    (with century) of an event
  * %chgrp% returns the VDR channel group name corresponding to an event    
  * %liveeventid% returns the encoded event ID as used in the frontend 'live' to add
    direct links e.g. in the search timer mails.
- in memory to pat: french translation update, thanks to Patrice Staudt
- italian translation update, thanks to Diego Pierotto
- finnish translation update, thanks to Rolf Ahrenberg
- new SVDRP command 'MENU [NOW|PRG|SUM]' to call one of the main OSD menus or 
  the summary of the current event. If any epgsearch menu is open a subsequent
  SVDRP call will close it again.
- changed the maximum number of days for a timer conflict check from 99 to 14
- patch by Jörg Wendel for new graphtft patch
- Two events with both empty episode names are now handled different within the 
  feature 'Avoid repeats'. This will result in more recordings, but ensures not to 
  miss one only because of a buggy EPG.
- searchtimers: if a timers filename results in an empty string or contains 
  "!^invalid^!" it will be skipped for programming now.
- Avoid repeats: 'Compare subtitle' has now a third value 'if present' besides 'no'
  and 'yes'. With this setting epgsearch will classify two events only as equal if 
  their episode names match and are not empty. Caution: if your EPG data has no episode 
  names for different episodes don't use this option! 'yes' will then be the better
  choice even if this results in double recordings.