@@ -19,12 +19,18 @@ neu:
   gegeben werden. Dazu gibt es eine neue Suchtimeraktion "Per Mail ankündigen". Man muss 
   ausserdem das Mail-Templatefile epgsearchupdmail.templ anpassen (s. Beispiel im conf-
   Verzeichnis bzw. MANUAL '13. Email notification').
+- Die Zeit in Stunden zwischen den Suchtimer-Emails kann nun im Setup eingestellt werden
+  um eine Überflutung des Posteingangs zu vermeiden. epgsearch puffert den Inhalt ausstehender
+  Mails in der neuen Datei pendingnotifications.conf.
 - neue interne Variablen:
   * %day%, %month% und %year% liefern den numerische Tag, das Monat und das
     Jahr (mit Jahrhundert) einer Sendung
   * %chgrp% liefert die VDR Kanalgruppe einer Sendung
   * %liveeventid% liefert die kodierte Event-ID wie sie im Frontend 'live' benutzt wird.
-    Damit können nun z.B. in den Searchtimer-Mails direkte Links angegeben werden.
+    Damit können nun z.B. in den Suchtimer-Mails direkte Links angegeben werden. (s. Beispiel
+    conf/epgsearchupdmail-html.templ)
+  * %timer.liveid% liefert die kodierte Timer-ID wie sie im Frontend 'live' benutzt wird.
+    Damit können nun z.B. in den Suchtimer-Mails direkte Links angegeben werden.
 - Im Gedenken an pat: Update der französischen Übersetzung, Danke an Patrice Staudt
 - Update der italienischen Übersetzung, Danke an Diego Pierotto
 - Update der finnischen Übersetzung, Danke an Rolf Ahrenberg
